--- a/teaching/f2024_dg2.html
+++ b/teaching/f2024_dg2.html
@@ -37,6 +37,7 @@
 2023-09-13: The date and time for the <FONT color="#FF00FF"><b>final exam</b></FONT> has been posted below. This day is the make-up day for the CBNU anniversary (Wednesday September 27th).<br>     
 2023-09-13: <FONT COLOR="red">Homework #1</FONT> has been posted below.<br>
 -->
+2024-12-19: Letter grades have been submitted. Happy Holidays!<br>  
 2024-11-29: Please find an email announcement regarding an extracurricular actitivity related to this course: <a href="http://events.kias.re.kr/h/WSG25/?pageNo=5779" title="KIAS Geometry Winter School">Link</a>. Let me know if you want to participate.<br>
 2024-11-28: If you want to see your graded paper of the upcoming final exam or to just receive your score by email, please email me no later than Thursday, December 12th 23:59. Please read the email announcement for more details.<br>
 2024-11-28: <FONT color="#FF00FF"><b>Final exam announcement</b></FONT> Details have been posted below.<br>       
@@ -112,7 +113,8 @@ Final Exam:  <FONT COLOR="#C40062">12 December (Thursday),</FONT> 10:00--11:40 a
 - Total 6 questions. There will be 1 set of T/F questions. Some problems will be identical or closely related to homework problems.<br>
 - If you cannot make it to the in-class exam due to an official cause (including properly documented illness), you have to submit a Make-up Exam Application Form at your department. Here is a handout about <a href="../teaching/makeup.pdf" title="Make-up exam policies">make-up exam policies</a>.<br>
 - Dispute meetings are planned to be scheduled on December 19th, 2024 during 10:00--12:00.<br>
-<!-- - The average was 68.41 and the maximum score achieved by a student was 98.<br><br> 
+- The average was 68.5 and the maximum score achieved by a student was 100.<br><br>  
+<!--  
 
 -->
   
