--- a/teaching/f2024_ge.html
+++ b/teaching/f2024_ge.html
@@ -39,6 +39,9 @@
 
 
 -->
+
+
+2024-12-19: Letter grades has been submitted. Happy Holidays!<br>  
 2024-10-10: Classes scheduled on October 31st 14:00--16:50 will meet instead on October 16th 19:00--21:50<br>
 2024-09-03: Classes scheduled on December 23rd 14:00--16:50 will meet instead on December 19th 13:00--15:50<br>
 2024-09-01: Welcome!<br>
