--- a/index.html
+++ b/index.html
@@ -80,10 +80,10 @@ Contemp. Math.</a></em>, <b>21</b>(2) (2019) 1--40. <a href="http://arxiv.org/ab
 
 <h2><p>Teaching</p></h2>
 <dl>
-<dd><a href="teaching/f2024_srp2.html">Special Research Project II</a> (Graduate Course)</dd>    
-<dd><a href="teaching/f2024_tig1.html">Topics in Geometry I</a> (Graduate Course)</dd>
-<dd><a href="teaching/f2024_ge.html">Geometry and education</a></dd>
-<dd><a href="teaching/f2024_dg2.html">Differential Geometry II</a></dd>
+<dd><a href="teaching/s2025_dg1.html">Differential Geometry I</a></dd>
+<dd><a href="teaching/s2025_geom1.html">Geometry for teachers</a></dd>
+<dd><a href="teaching/s2025_introgeom.html">Introduction to Geometry</a></dd>
+<dd><a href="teaching/s2025_calc1.html">Calculus I</a></dd>  
 </dl>
 <ul>
   <li><a href="teaching/pastcourses.html">Past courses</a></li>
@@ -91,6 +91,12 @@ Contemp. Math.</a></em>, <b>21</b>(2) (2019) 1--40. <a href="http://arxiv.org/ab
 
 
 <!--
+
+<dd><a href="teaching/f2024_srp2.html">Special Research Project II</a> (Graduate Course)</dd>    
+<dd><a href="teaching/f2024_tig1.html">Topics in Geometry I</a> (Graduate Course)</dd>
+<dd><a href="teaching/f2024_ge.html">Geometry and education</a></dd>
+<dd><a href="teaching/f2024_dg2.html">Differential Geometry II</a></dd>
+  
 <dd><a href="teaching/s2023_dg1.html">Differential Geometry I</a></dd>
 <dd><a href="teaching/s2023_geom1.html">Geometry for teachers</a></dd>
 <dd><a href="teaching/s2023_introgeom.html">Introduction to Geometry</a></dd>
@@ -222,7 +228,7 @@ Contemp. Math.</a></em>, <b>21</b>(2) (2019) 1--40. <a href="http://arxiv.org/ab
 <!--
 <a href="4214-06/4214-06.html">4214-06</a><br><br>-->
 
-Last Updated: 3 September 2024
+Last Updated: 19 February 2025
 
 </font>
 </body>
