--- a/teaching/f2024_srp2.html
+++ b/teaching/f2024_srp2.html
@@ -18,9 +18,7 @@
 
 
 <h2><p>Announcements</p></h2>
-<!-- 2021-08-04: Letter grades have been submitted. Enjoy your summer.<br>  -->
-  
-
+2025-01-24: Letter grades have been submitted.<br>  -->
 2024-09-01: Welcome!<br>
 
 
