--- a/teaching/f2024_tig1.html
+++ b/teaching/f2024_tig1.html
@@ -23,6 +23,7 @@
 2022-07-21: On Monday July the 25th, I will have to go on a business trip. We will make it up by online classes. Please see Week 8 of course materials in our CBNU eCampus.<br>
 2021-07-14: Welcome again!<br>
 -->
+2025-01-24: Letter grades have been submitted.<br>  
 2024-12-04: The class meeting schedule from Weeks 8 to 15 has been changed. Please see the updated course outline for details.<br>  
 2024-09-01: Welcome! Our first day of class is October 30th.<br>
 
