--- a/teaching/s2025_dg1.html
+++ b/teaching/s2025_dg1.html
@@ -1,1 +1,128 @@
-.
+<html>
+<head>
+<title> Differential Geometry I </title>
+</head>
+<font face="Times New Roman">
+<body>
+<h1><p align="center">Differential Geometry I</p></h1>
+<h3><p align="center">Course 7412005 Section 01, Spring 2025</p></h3>
+<h3><p align="center">Wednesdays 14:00 - 15:50, Wednesdays 11:00 - 11:50, Room: E1-1 #140</p></h3>
+<h3><p align="center">Chungbuk National University</p></h3>
+<br>
+
+
+<!-- FONT SIZE SPECIFICATION-->
+<font size="4" >
+<b>Instructor:</b> Dr. Byungdo Park &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp <b>Email:</b> <img src="../images/eml_chungbuk.jpg" width="337" height="62"><br>
+<b>Office Hours:</b> Wednesdays 14:00--14:50 at E1-1 Room 110.<br>
+<b>Syllabus:</b>  <a href="s2025_dg1/courseoutline_compressed.pdf" title="Open Course Outline">PDF</a><br>
+
+<h2><p>Announcements</p></h2>
+<!-- 
+2024-06-24: Letter grades have been submitted. Enjoy your summer break.<br>   
+2024-06-13: Please respond by June 19th noon if you want to see your graded final exam papers or if you want to receive the result by email. Please read the email announcement.<br>    
+2024-05-27: <FONT color="#FF00FF"><b>Final exam announcement</b></FONT> The detail has been posted below.<br>   
+2024-05-27: Review report of the 1st course evaluation survey will not be posted because there is no items to address.<br>  
+2024-05-15: <b>Announcements</b> The class will go online for today's 14:00 class. Watch the lecture through eCampus by May 29th.<br>  
+2024-05-15: Those who did not receive handouts should email me to get a copy.<br>    
+2024-05-15: <FONT COLOR="red">Homework #8</FONT> has been posted below.<br>  
+2024-05-15: <FONT COLOR="red">Homework #7</FONT> has been posted below.<br>  
+2024-05-15: <FONT COLOR="red">Homework #6</FONT> has been posted below.<br>    
+2024-05-01: <b>Announcements</b> The class will go online for today's 14:00 class. Watch the lecture through eCampus by May 16th.<br>  
+2024-04-28: The midterm exam papers have been graded. If you want to see your graded paper or to just receive your score by email, please email me no later than Tuesday, May 7th 23:59. Please read the email announcement for more details.<br>       
+2024-04-11: <FONT color="#FF00FF"><b>Midterm exam announcement</b></FONT> The detail has been posted below.<br>    
+2024-04-11: <FONT COLOR="red">Homework #5</FONT> has been posted below.<br>     
+2024-04-11: <FONT COLOR="red">Homework #4</FONT> has been posted below.<br>
+2024-04-10: <b>Announcements</b> The class will go online for today's 16:00 class. Watch the lecture through eCampus by April 24th.<br>    
+2024-03-24: <FONT COLOR="red">Homework #3</FONT> has been posted below.<br>   
+2024-03-17: <FONT COLOR="red">Homework #2</FONT> has been posted below.<br>   
+2024-03-17: <FONT COLOR="red">Homework #1</FONT> has been posted below.<br>  
+   -->
+2025-03-01: Lecture notes will be made available on CBNU eCampus hopefully by the weekend of each class meeting.<br>  
+2025-03-01: <b>Announcements</b> <a href="../teaching/s2025_dg1/2025-03-01_dispute.pdf" title="Dispute related">Here</a> are procedures specifying details in the dispute policies.<br>
+2025-03-01: Welcome!<br>
+
+
+<h2><p>Homework</p></h2>
+
+  <!-- TBA 
+<b>Homework  #1</b> 11 problems.<br>
+Problems from Chapter 3: #1, 9, 15, 17, 18, 21, 25, 26, 31, 32, 34.<br><br>
+
+<b>Homework  #2</b> 8 problems.<br>
+Problems from Chapter 4 (Part 1): #1, 2, 4, 5, 9, 26, 27, 29<br><br>
+
+<b>Homework  #3</b> 10 problems.<br>
+Problems from Chapter 4 (Part 2): #11, 12, 13, 16, 17, 18, 19, 21, 28, 30<br><br>  
+
+<b>Homework  #4</b> 12 problems.<br>
+Problems from Chapter 4 (Part 3): #32, 33, 34, 35, 38<br>  
+Problems from the National Exam: <a href="s2024_dg1/handout1.pdf" title="Selected problems from the national exam">PDF</a>.<br><br>
+
+<b>Homework  #5</b>  20 problems.<br>
+Problems from Chapter 5: #5, 7, 8<br>
+Problems from O'Neill, Elementary Differential Geometry, p.15 Exercise #3, 4, 5<br>
+Problems from O'Neill, Elementary Differential Geometry, p.22 Exercise #6<br>
+Problems from O'Neill, Elementary Differential Geometry, p.40 Exercise #4, 5, 6, 7, 8, 9, 10<br>  
+Problems from O'Neill, Elementary Differential Geometry, p.106 Exercise #2, 7, 8<br>
+Problems from O'Neill, Elementary Differential Geometry, p.110 Exercise #2, 4<br>
+Problems from O'Neill, Elementary Differential Geometry, p.120 Exercise #4<br><br>
+
+<b>Homework  #6</b> 7 problems.<br>
+Problems from Handout 2.<br><br> 
+
+<b>Homework  #7</b> 9 problems.<br>
+Problems from Handout 3.<br><br>      
+
+  
+<b>Homework  #8</b> 10 problems.<br>  
+Problems from Chapter 8 Part 1: #4, 5, 6, 8, 10 <a href="s2022_dg1/hw8no10addendum.pdf" title="Open addendum to Problem 8.10">(Addendum)</a>, 24, 26, 29 <a href="s2022_dg1/hw8no29sol.pdf" title="Open Solutions to Problem 8.29">(Solution)</a>, 32, 33.<br>
+Problems from Chapter 8 Part 2: #17, 19(a), 28, 30, 34, 38.<br><br> 
+  -->
+
+<h2><p>Exam Schedules</p></h2>
+TBA
+  <!--
+Midterm exam: <FONT COLOR="#C40062">24 April (Wednesday) 16:00--17:40</FONT> in-class. <br>
+- Coverage: Chapters 3, 4, and 5 of the main textbook including Handout 1<br>
+- Total 8 questions.There will be one set of True/False questions (Please note that you get full credit if you are correct, no credit for no answer, and negative of the assigned score if your answer to this question is incorrect). This exam will be geared toward giving advantages to those who were carefully following class discussions while keeping a good pace of doing homework. <br>
+- If you cannot make it to the in-class exam due to an official cause (including properly documented illness), you have to submit a Make-up Exam Application Form at your department. Here is a handout about <a href="../teaching/makeup.pdf" title="Make-up exam policies">make-up exam policies</a>.<br>
+The average was 59.31. The maximum score achieved by a student was 96.<br><br>  
+
+ Final Exam: <FONT COLOR="#C40062">14 June (Friday) 10:00--11:40</FONT> in-class. <br>
+- Coverage: Everything covered in this course including all homework problems.<br>
+- Total 8 questions. There will be one set of True/False questions (Please note that you get full credit if you are correct, no credit for no answer, and negative of the assigned score if your answer to this question is incorrect). This exam will be geared toward giving advantages to those who were carefully following class discussions while keeping a good pace of doing homework. <br>
+- If you cannot make it to the in-class exam due to an official cause (including properly documented illness), you have to submit a Make-up Exam Application Form at your department. Here is a handout about <a href="../teaching/makeup.pdf" title="Make-up exam policies">make-up exam policies</a>.<br>
+The average was 52.11. The maximum score achieved by a student was 94.<br><br> 
+<br>  
+  -->
+ 
+
+
+<h2><p>Assessment of Project-Based Learning (PBL)</p></h2>
+For an extra credit, you should record a 20-minute long video lecture about one of the following:<br>
+(1) A sample lecture on any topic listed on the syllabus of this course.<br>
+(2) A sample lecture on a concept from secondary school geometry curricular.<br><br>
+You should submit the video in a form of a YouTube video link by choosing the sharing option "unlisted." Please use <a href="https://forms.gle/Ueg2jvvnkcSvmb797" title="A Google form to hand-in your work">this form</a> to submit your work.<br><br>
+  
+Your video will be disclosed to your classmates in this course as a part of a YouTube playlist. You may turn your video into “private” or even delete the video after your letter grade for this course is assigned.<br><br>
+
+  
+
+<h2><p>Links</p></h2>
+<a href="https://byungdo.github.io/">Webpage of Byungdo Park</a><br>
+<a href="https://edu.chungbuk.ac.kr/mathedu/index.do">CBNU Mathematics Education Department Homepage</a><br>
+<br><br>
+
+
+
+
+</font>
+<!-- FONT SIZE SPECIFICATION-->
+
+
+</font>
+</body>
+
+
+</html>
