--- a/teaching/s2025_dg1.html
+++ b/teaching/s2025_dg1.html
@@ -38,16 +38,17 @@
 2024-03-17: <FONT COLOR="red">Homework #2</FONT> has been posted below.<br>   
 2024-03-17: <FONT COLOR="red">Homework #1</FONT> has been posted below.<br>  
    -->
+2025-03-01: <FONT COLOR="red">Homework #1</FONT> has been posted below.<br>     
 2025-03-01: Lecture notes will be made available on CBNU eCampus hopefully by the weekend of each class meeting.<br>  
 2025-03-01: <b>Announcements</b> <a href="../teaching/s2025_dg1/2025-03-01_dispute.pdf" title="Dispute related">Here</a> are procedures specifying details in the dispute policies.<br>
 2025-03-01: Welcome!<br>
 
 
 <h2><p>Homework</p></h2>
-
-  <!-- TBA 
 <b>Homework  #1</b> 11 problems.<br>
 Problems from Chapter 3: #1, 9, 15, 17, 18, 21, 25, 26, 31, 32, 34.<br><br>
+
+  <!-- 
 
 <b>Homework  #2</b> 8 problems.<br>
 Problems from Chapter 4 (Part 1): #1, 2, 4, 5, 9, 26, 27, 29<br><br>
