--- a/teaching/s2025_introgeom.html
+++ b/teaching/s2025_introgeom.html
@@ -1,1 +1,116 @@
-.
+<html>
+<head>
+<title> Introduction to Geometry </title>
+</head>
+<font face="Times New Roman">
+<body>
+<h1><p align="center">Introduction to Geometry</p></h1>
+<h3><p align="center">Course 7412645 Section 01, Spring 2025</p></h3>
+<h3><p align="center">Tuesdays 13:00 - 13:50, Thursdays 13:00 - 14:50, Room: E1-2 #306</p></h3>
+<h3><p align="center">Chungbuk National University</p></h3>
+<br>
+
+
+<!-- FONT SIZE SPECIFICATION-->
+<font size="4" >
+<b>Instructor:</b> Dr. Byungdo Park &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp <b>Email:</b> <img src="../images/eml_chungbuk.jpg" width="337" height="62"><br>
+<b>Office Hours:</b> Wednesdays 14:00--14:50 at E1-1 Room 110.<br>
+<b>Syllabus:</b>  <a href="s2025_introgeom/courseoutline_compressed.pdf" title="Open Course Outline">PDF</a><br>
+
+
+<h2><p>Announcements</p></h2>
+<!--
+2023-06-15: Letter grades have been submitted. Enjoy your summer break.<br>  
+2023-06-01 <b>Announcements</b> We won't meet on June 7th 14:00 (cf. announcement on May 11th). See the Week 14 folder of CBNU eCampus for a final exam summary video. <br>
+2023-06-01: <FONT color="#FF00FF"><b>Final exam announcement</b></FONT> The coverage has been updated. See below.<br>     
+2023-06-01: <FONT COLOR="red">Homework #9</FONT> has been posted below. Note the deadline is different from usual.<br>  
+2023-05-28: <FONT color="#FF00FF"><b>Final exam announcement</b></FONT> The detail has been posted below.<br> 
+2023-05-28: The announcement of the dispute procedure (2023.05.20.) has been updated. See the link therein.<br>  
+2023-05-25: The announcement of the dispute procedure (2023.05.20.) has been updated. See the link therein.<br>  
+2023-05-20: <b>Announcements</b> The last day to dispute your grade details and relevant information are <a href="../teaching/s2023_dg1/2023-05-28_dispute.pdf" title="Dispute related">here</a>.<br>
+2023-05-18: <FONT COLOR="red">Homework #8</FONT> has been posted below.<br>  
+2023-05-11: Please see the change of class schedule we have discussed and agreed today in class: <a href="../teaching/s2023_introgeom/2023-05-11_changeplan.pdf" title="Change of class schedule">PDF</a>.<br>
+2023-05-03: <FONT COLOR="red">Homework #7</FONT> has been posted below.<br>  
+2023-04-20: <FONT color="#FF00FF"><b>Midterm exam announcement</b></FONT> The coverage and details have been updated. See below.<br>     
+2023-04-20: <FONT COLOR="red">Homework #6</FONT> has been posted below.<br>  
+2023-04-13: <FONT color="#FF00FF"><b>Midterm exam announcement</b></FONT> The detail has been posted below.<br>     
+2023-04-13: <FONT COLOR="red">Homework #5</FONT> has been posted below.<br>  
+2023-04-06: <FONT color="#FF00FF"><b>Midterm exam</b></FONT> will take place on April 27th (Thu), in-class. Details will be announced later.<br>   
+2023-03-30: <FONT COLOR="red">Homework #4</FONT> has been posted below.<br>  
+2023-03-24: A note on Desargues' theorem and its proofs is available at CBNU eCampus (Blackboard) in the Week 4 course materials folder.<br>
+2023-03-23: <FONT COLOR="red">Homework #3</FONT> has been posted below.<br>  
+2023-03-16: <FONT COLOR="red">Homework #2</FONT> has been posted below.<br> 
+2023-03-10: <FONT COLOR="red">Homework #1</FONT> has been posted below.<br>
+-->  
+2025-03-01: <b>Announcements</b> <a href="../teaching/s2025_dg1/2025-03-01_dispute.pdf" title="Dispute related">Here</a> are procedures specifying details in the dispute policies.<br>  
+2025-03-01: Lecture notes will be made available on CBNU eCampus hopefully by the weekend of each class meeting.<br>
+2025-03-01: Welcome!<br>
+ 
+ 
+<h2><p>Homework</p></h2>
+TBA
+  <!--
+<b>Homework  #1</b> 14 problems. Due Date: March 15th (Wed).<br>
+Chapter 1 Problems 1 to 14<br><br>
+<b>Homework  #2</b> 12 problems. Due Date: March 22nd (Wed).<br>
+Chapter 1 Problems 15 to 26<br><br>
+<b>Homework  #3</b> 15 problems. Due Date: March 29th (Wed).<br>
+Chapter 1 Problems 27 to 41<br><br>
+<b>Homework  #4</b> 12 problems. Due Date: April 5th (Wed).<br>
+Chapter 1 Problems 42 to 53<br><br>
+<b>Homework  #5</b> 12 problems. Due Date: April 19th (Wed).<br>
+Chapter 2 Problems 1 to 8<br><br>
+<b>Homework  #6</b> 14 problems. Due Date: April 26th (Wed).<br>
+Chapter 2 Problems 9 to 22<br><br>
+<b>Homework  #7</b> 24 problems. Due Date: May 10th (Wed).<br>
+Chapter 2 Problems 23 to 46<br><br>
+<b>Homework  #8</b> 24 problems. Due Date: May 24th (Wed).<br>
+Chapter 2 Problems 47 to 59<br>
+Chapter 4 Problems 1 to 11<br><br>
+<b>Homework  #9</b> 14 problems. Due Date: June 8th (Thu).<br>
+Chapter 4 Problems 12 to 25<br><br>
+  -->
+
+<h2><p>Exam Schedules</p></h2>
+TBA
+  <!--
+Midterm Exam: <FONT COLOR="#C40062">27 April (Thursday) 13:00--14:40</FONT> in-class. <br>
+- <b>Important:</b> Bring your straightedge (a ruler).<br>
+- Coverage (updated): Chapter 1, <s>Chapter 2 (only those sections we completed by April 20th class)</s> Chapter 2 Part I and II (p.1 to p.113). <br>
+- Total 8 questions. There will be one set of True/False questions (Please note that you get full credit if you are correct, no credit for no answer, and negative of the assigned score if your answer to this question is incorrect). This exam will be geared toward giving advantages to those who were carefully following class discussions while keeping a good pace of doing homework. <br>
+- If you cannot make it to the in-class exam due to an official cause (including properly documented illness), you have to submit a Make-up Exam Application Form at your department. Here is a handout about <a href="../teaching/makeup.pdf" title="Make-up exam policies">make-up exam policies</a>.<br>
+The average was 77.81. The maximum score achieved by a student was 98.<br><br>
+ 
+ Final Exam: <FONT COLOR="#C40062">09 June (Friday) 17:00--18:40</FONT> Location: E1-2 Room 306. <br>
+- <b>Important:</b> Bring your straightedge (a ruler). You can also use a compass if you want but it is not mandatory.<br>
+- Coverage: Everything we covered in this course up to June 1st class (p.293).<br>
+- Total 8 questions. There will be one set of True/False questions (Please note that you get full credit if you are correct, no credit for no answer, and negative of the assigned score if your answer to this question is incorrect). This exam will be geared toward giving advantages to those who were carefully following class discussions while keeping a good pace of doing homework. <br>
+- If you cannot make it to the in-class exam due to an official cause (including properly documented illness), you have to submit a Make-up Exam Application Form at your department. Here is a handout about <a href="../teaching/makeup.pdf" title="Make-up exam policies">make-up exam policies</a>.<br> 
+ The average was 61.42. The maximum score achieved by a student was 100.<br><br>
+<br> 
+ -->
+ 
+ 
+
+<h2><p>Assessment of Project-Based Learning (PBL)</p></h2>
+For an extra credit, you should record a 20-minute long video lecture about one of the following:<br>
+(1) A sample lecture on any topic listed on the syllabus of this course.<br>
+(2) A sample lecture on a concept from secondary school geometry curricular.<br><br>
+You should submit the video in a form of a YouTube video link by choosing the sharing option "unlisted." Please use <a href="https://forms.gle/xMxqGJ5Bj81i5jR66" title="A Google form to hand-in your work">this form</a> to submit your work.<br><br> 
+  
+Your video will be disclosed to your classmates in this course as a part of a YouTube playlist. You may turn your video into “private” or even delete the video after your letter grade for this course is assigned.<br><br>
+
+ 
+<h2><p>Links</p></h2>
+<a href="https://byungdo.github.io/">Webpage of Byungdo Park</a><br>
+<a href="https://edu.chungbuk.ac.kr/mathedu/index.do">CBNU Mathematics Education Department Homepage</a><br>
+<br><br>
+
+</font>
+<!-- FONT SIZE SPECIFICATION-->
+
+</font>
+</body>
+
+
+</html>
