--- a/teaching/s2025_calc1.html
+++ b/teaching/s2025_calc1.html
@@ -44,6 +44,7 @@
 2023-03-01: <b>Announcements</b> Please see the standard operation procedures for an absentism due to SARS-CoV-2. <a href="../teaching/s2023_dg1/2023-03-01_covid_absence.pdf" title="Absence due to SARS-CoV-2">PDF</a><br
   -->
 2025-03-01: Lecture notes will be made available on CBNU eCampus hopefully by the weekend of each class meeting.<br>  
+2025-03-01: <FONT color="#FF00FF"><b>Midterm and final exam announcement</b></FONT> Please see the exam dates and time and vacate your schedule accordingly.<br> 
 2025-03-01: Welcome!<br>
 
 
@@ -119,8 +120,18 @@ Quiz II: May 29th, 09:30--09:50, in-class.<br><br>
 
   
 <h2><p>Exam Schedules</p></h2>
-  TBA
+Midterm exam: <FONT COLOR="#C40062">29 April (Tuesday), 19:00--20:00.</FONT> Location: TBA.<br>
+- Coverage: TBA.<br>
+- If you cannot make it to the in-class exam due to an official cause (including properly documented illness), you have to submit a Make-up Exam Application Form at your department. Here is a handout about <a href="../teaching/makeup.pdf" title="Make-up exam policies">make-up exam policies</a>.<br>
+ 
+Final exam: <FONT COLOR="#C40062">17 June (Tuesday), 19:00--20:00.</FONT> Location: TBA.<br>
+- Coverage: TBA.<br>
+- If you cannot make it to the in-class exam due to an official cause (including properly documented illness), you have to submit a Make-up Exam Application Form at your department. Here is a handout about <a href="../teaching/makeup.pdf" title="Make-up exam policies">make-up exam policies</a>.<br>
+ 
+  
+  
   <!--
+
 The 1st midterm exam: <FONT COLOR="#C40062">11 April (Tuesday), 15:00--15:50.</FONT> In-class.<br>
 - Coverage: Chapters 1 and 2.<br>
 - Total 4 questions. Some problems will be identical or closely related to homework problems.<br>
@@ -135,6 +146,7 @@ The 2nd midterm exam: <FONT COLOR="#C40062">02 May (Tuesday), 15:00--15:50.</FON
 - If you cannot make it to the in-class exam due to an official cause (including properly documented illness), you have to submit a Make-up Exam Application Form at your department. Here is a handout about <a href="../teaching/makeup.pdf" title="Make-up exam policies">make-up exam policies</a>.<br>
 The average was 49.42. The maximum score achieved by a student was 100.<br><br>
 
+  
 The 3rd midterm exam: <FONT COLOR="#C40062">23 May (Tuesday), 15:00--15:50.</FONT> In-class.<br>
 - Coverage: Chapters 5 and 6.<br>
 - Total 4 questions. Some problems will be identical or closely related to homework problems.<br>
