--- a/teaching/s2025_introgeom.html
+++ b/teaching/s2025_introgeom.html
@@ -41,6 +41,7 @@
 2023-03-23: <FONT COLOR="red">Homework #3</FONT> has been posted below.<br>  
 2023-03-16: <FONT COLOR="red">Homework #2</FONT> has been posted below.<br> 
 -->  
+2025-03-13: <FONT COLOR="red">Homework #2</FONT> has been posted below.<br>
 2025-03-06: <FONT COLOR="red">Homework #1</FONT> has been posted below.<br>
 2025-03-01: <b>Announcements</b> <a href="../teaching/s2025_dg1/2025-03-01_dispute.pdf" title="Dispute related">Here</a> are procedures specifying details in the dispute policies.<br>  
 2025-03-01: Lecture notes will be made available on CBNU eCampus hopefully by the weekend of each class meeting.<br>
@@ -50,9 +51,9 @@
 <h2><p>Homework</p></h2>
 <b>Homework  #1</b> 4 problems. Due Date: March 11th (Tue).<br>
 Chapter 1 Problems 1 to 4<br><br>
-  <!--
-<b>Homework  #2</b> 12 problems. Due Date: March 22nd (Wed).<br>
-Chapter 1 Problems 15 to 26<br><br>
+<b>Homework  #2</b> 14 problems. Due Date: March 18th (Tue).<br>
+Chapter 1 Problems 5 to 18<br><br>
+ <!--
 <b>Homework  #3</b> 15 problems. Due Date: March 29th (Wed).<br>
 Chapter 1 Problems 27 to 41<br><br>
 <b>Homework  #4</b> 12 problems. Due Date: April 5th (Wed).<br>
