--- a/teaching/s2025_geom1.html
+++ b/teaching/s2025_geom1.html
@@ -38,7 +38,8 @@
 2024-04-11: <FONT COLOR="red">Homework #4</FONT> has been posted below.<br>
 2024-04-10: <b>Announcements</b> The class will go online for today's 14:00 class. Watch the lecture through eCampus by April 24th.<br>  
 2024-03-24: <FONT COLOR="red">Homework #3</FONT> has been posted below.<br>  
-2024-03-17: <FONT COLOR="red">Homework #2</FONT> has been posted below.<br>  --> 
+ --> 
+2025-03-13: <FONT COLOR="red">Homework #2</FONT> has been posted below.<br> 
 2025-03-01: <FONT COLOR="red">Homework #1</FONT> has been posted below.<br>  
 2025-03-01: Lecture notes will be made available on CBNU eCampus hopefully by the weekend of each class meeting.<br>  
 2025-03-01: <b>Announcements</b> <a href="../teaching/s2025_dg1/2025-03-01_dispute.pdf" title="Dispute related">Here</a> are procedures specifying details in the dispute policies.<br>
@@ -53,13 +54,15 @@ Exercises in Section 1.4. p.6 #3, 4, 5, 6, 7<br>
 Exercises in Section 1.5. p.8 #1, 4, 5<br>
 Exercises in Section 1.6. p.11 #1<br>
 <br>
-<!--
+
 <b>Homework  #2</b> 10 problems.<br>
 Exercises in Section 2.1. p.13 #1<br>
 Exercises in Section 2.2. p.15 #1, 2, 3, 4<br>
 Exercises in Section 2.3. p.18 #1<br>
 Exercises in Section 2.4. p.20 #1, 2, 3, 5<br>
-<br> 
+<br>  
+<!--
+
 
  <b>Homework  #3</b> 9 problems.<br>
 Exercises in Section 3.2. p.24 #2<br>
