--- a/teaching/s2025_calc1.html
+++ b/teaching/s2025_calc1.html
@@ -40,9 +40,10 @@
 2023-04-08: <FONT COLOR="red">Homework #3</FONT> has been posted below.<br>   
 2023-03-30: <FONT color="#FF00FF"><b>The 1st midterm exam announcement</b></FONT> The detail has been posted below.<br> 
 2023-03-26: <FONT COLOR="red">Homework #2</FONT> has been posted below.<br>   
-2023-03-10: <FONT COLOR="red">Homework #1</FONT> has been posted below.<br>   
+
 2023-03-01: <b>Announcements</b> Please see the standard operation procedures for an absentism due to SARS-CoV-2. <a href="../teaching/s2023_dg1/2023-03-01_covid_absence.pdf" title="Absence due to SARS-CoV-2">PDF</a><br
   -->
+2025-03-13: <FONT COLOR="red">Homework #1</FONT> has been posted below.<br>   
 2025-03-01: Lecture notes will be made available on CBNU eCampus hopefully by the weekend of each class meeting.<br>  
 2025-03-01: <FONT color="#FF00FF"><b>Midterm and final exam announcement</b></FONT> Please see the exam dates and time and vacate your schedule accordingly.<br> 
 2025-03-01: Welcome!<br>
@@ -53,15 +54,14 @@
 
 
 <h2><p>Homework</p></h2>
-TBA
-  <!--
-<b>Homework  #1</b> 15 problems.<br>
+<b>Homework  #1</b> 13 problems.<br>
 Section 1.1: #4, 5, 6.<br>
 Section 1.3: #2, 3(1) to (6).<br>
+Section 1.4: #3, 4, 7.<br>  
+Section 1.5: #1, 6, 7, 8, 10.<br><br>
 
   
-  Section 1.4: #2, 3, 4, 6.<br>  
-Section 1.5: #1, 5, 6, 7, 9, 10.<br><br>
+  <!--
 
   
 <b>Homework  #2</b> 19 problems.<br>
