--- a/index.html
+++ b/index.html
@@ -37,8 +37,8 @@ Here is my <a href="CV_Park.pdf">CV</a>. <!-- My research is supported by the <a
 
 <h2><p>Publications and preprints</p></h2>
 <ul>
+  <li>Brown functors of directed graphs, with <a href="https://www.math.nthu.edu.tw/~hyliao/index.html">Hsuan-Yi Liao</a>, <a href="https://arxiv.org/abs/2503.14865">Dang Khoa Nguyen</a>, and <a href="https://mathscinet.ams.org/mathscinet/MRAuthorID/1255865">Zachary McGuirk</a>. <a href="https://arxiv.org/abs/2503.14865">ArXiv</a></li>
   <li>Generalization of the Thistlethwaite-Tsvietkova Method, with <a href="https://www.linkedin.com/in/alice-kwon-1439831a6">Alice Kwon</a> and <a href="https://yinghongtham.github.io/">Ying Hong Tham</a>. <a href="http://arxiv.org/abs/2309.01282">ArXiv</a></li>
-  <li>Brown representability for directed graphs, with <a href="https://mathscinet.ams.org/mathscinet/MRAuthorID/1255865">Zachary McGuirk</a>. <a href="http://arxiv.org/abs/2003.07426">ArXiv</a></li>
   <li>Geometric families define differential K-theory, with <a href="https://sites.google.com/view/jae-min-lee/home">Jae Min Lee</a>.</li>
   <li>On the smoothness of the geodesic spray for the Camassa-Holm equation, with <a href="https://sites.google.com/view/jae-min-lee/home">Jae Min Lee</a>, <a href="https://doi.org/10.1016/j.jmaa.2022.126472"><em>J. Math. Anal. Appl.</em></a>, <b>516</b>(1) (2022) 126472 1--12.</li>
   <li>Noncommutative differential K-theory, with <a href="https://arthurparzygnat.com/">Arthur J. Parzygnat</a>, <a href="http://myweb.liu.edu/~dredden/">Corbett Redden</a>, and <a href="https://math-inf.uni-greifswald.de/en/department/about-us/employees/augusto-stoffel/">Augusto Stoffel</a>, <a href="https://doi.org/10.1016/j.geomphys.2021.104446"><em>J. Geom. Phys.</em></a>, <b>174</b> (2022) 104446 1--40.<a href="http://arxiv.org/abs/2106.12073">ArXiv</a></li>
@@ -228,7 +228,7 @@ Contemp. Math.</a></em>, <b>21</b>(2) (2019) 1--40. <a href="http://arxiv.org/ab
 <!--
 <a href="4214-06/4214-06.html">4214-06</a><br><br>-->
 
-Last Updated: 19 February 2025
+Last Updated: 19 March 2025
 
 </font>
 </body>
