--- a/teaching/s2025_introgeom.html
+++ b/teaching/s2025_introgeom.html
@@ -40,7 +40,8 @@
 2023-03-24: A note on Desargues' theorem and its proofs is available at CBNU eCampus (Blackboard) in the Week 4 course materials folder.<br>
 2023-03-23: <FONT COLOR="red">Homework #3</FONT> has been posted below.<br>  
 2023-03-16: <FONT COLOR="red">Homework #2</FONT> has been posted below.<br> 
--->  
+--> 
+2025-03-20: <FONT COLOR="red">Homework #3</FONT> has been posted below.<br> 
 2025-03-13: <FONT COLOR="red">Homework #2</FONT> has been posted below.<br>
 2025-03-06: <FONT COLOR="red">Homework #1</FONT> has been posted below.<br>
 2025-03-01: <b>Announcements</b> <a href="../teaching/s2025_dg1/2025-03-01_dispute.pdf" title="Dispute related">Here</a> are procedures specifying details in the dispute policies.<br>  
@@ -53,9 +54,10 @@
 Chapter 1 Problems 1 to 4<br><br>
 <b>Homework  #2</b> 14 problems. Due Date: March 18th (Tue).<br>
 Chapter 1 Problems 5 to 18<br><br>
+<b>Homework  #3</b> 13 problems. Due Date: March 25th (Tue).<br>
+Chapter 1 Problems 19 to 31<br><br> 
  <!--
-<b>Homework  #3</b> 15 problems. Due Date: March 29th (Wed).<br>
-Chapter 1 Problems 27 to 41<br><br>
+
 <b>Homework  #4</b> 12 problems. Due Date: April 5th (Wed).<br>
 Chapter 1 Problems 42 to 53<br><br>
 <b>Homework  #5</b> 12 problems. Due Date: April 19th (Wed).<br>
