--- a/teaching/s2025_calc1.html
+++ b/teaching/s2025_calc1.html
@@ -39,10 +39,11 @@
 2023-04-15: <FONT COLOR="red">Homework #4</FONT> has been posted below.<br>     
 2023-04-08: <FONT COLOR="red">Homework #3</FONT> has been posted below.<br>   
 2023-03-30: <FONT color="#FF00FF"><b>The 1st midterm exam announcement</b></FONT> The detail has been posted below.<br> 
-2023-03-26: <FONT COLOR="red">Homework #2</FONT> has been posted below.<br>   
+
 
 2023-03-01: <b>Announcements</b> Please see the standard operation procedures for an absentism due to SARS-CoV-2. <a href="../teaching/s2023_dg1/2023-03-01_covid_absence.pdf" title="Absence due to SARS-CoV-2">PDF</a><br
   -->
+2025-03-27: <FONT COLOR="red">Homework #2</FONT> has been posted below.<br>   
 2025-03-13: <FONT COLOR="red">Homework #1</FONT> has been posted below.<br>   
 2025-03-01: Lecture notes will be made available on CBNU eCampus hopefully by the weekend of each class meeting.<br>  
 2025-03-01: <FONT color="#FF00FF"><b>Midterm and final exam announcement</b></FONT> Please see the exam dates and time and vacate your schedule accordingly.<br> 
@@ -60,17 +61,20 @@ Section 1.3: #2, 3(1) to (6).<br>
 Section 1.4: #3, 4, 7.<br>  
 Section 1.5: #1, 6, 7, 8, 10.<br><br>
 
+ 
+<b>Homework  #2</b> 24 problems.<br>
+Section 2.1: #3, 4, 6, 7, 8.<br>
+Section 2.2: #4, 7, 8, 9.<br>
+Section 2.3: #1, 2[(1),(3),(5),(7)], 3, 4, 5.<br>
+Section 2.4: #2[(1),(3),(5),(7)], 3[(1),(3)], 4, 5, 6, 7.<br>
+Section 2.5: #1.<br>
+Section 2.6: #6, 9, 10.<br><br>
+
+  
   
   <!--
 
-  
-<b>Homework  #2</b> 19 problems.<br>
-Section 2.1: #3, 4, 5, 7, 8.<br>
-Section 2.2: #5, 6, 9, 10[(1),(3),(5)].<br>
-Section 2.3: #1[(1),(3),(5),(7)], 2, 3, 4.<br>
-Section 2.4: #2[(1),(3),(5),(7)], 3, 4.<br>
-Section 2.5: #1, 2(1), 4.<br><br>
-
+ 
   
 <b>Homework  #3</b> 24 problems.<br>
 Section 3.2: #2, 3[(1),(3),(5)], 4.<br>
