--- a/teaching/s2025_introgeom.html
+++ b/teaching/s2025_introgeom.html
@@ -41,6 +41,7 @@
 2023-03-23: <FONT COLOR="red">Homework #3</FONT> has been posted below.<br>  
 2023-03-16: <FONT COLOR="red">Homework #2</FONT> has been posted below.<br> 
 --> 
+2025-03-27: <FONT COLOR="red">Homework #4</FONT> has been posted below.<br> 
 2025-03-20: <FONT COLOR="red">Homework #3</FONT> has been posted below.<br> 
 2025-03-13: <FONT COLOR="red">Homework #2</FONT> has been posted below.<br>
 2025-03-06: <FONT COLOR="red">Homework #1</FONT> has been posted below.<br>
@@ -56,6 +57,8 @@ Chapter 1 Problems 1 to 4<br><br>
 Chapter 1 Problems 5 to 18<br><br>
 <b>Homework  #3</b> 13 problems. Due Date: March 25th (Tue).<br>
 Chapter 1 Problems 19 to 31<br><br> 
+<b>Homework  #4</b> 21 problems. Due Date: April 1st (Tue).<br>
+Chapter 1 Problems 32 to 53<br><br>  
  <!--
 
 <b>Homework  #4</b> 12 problems. Due Date: April 5th (Wed).<br>
