--- a/teaching/s2025_calc1.html
+++ b/teaching/s2025_calc1.html
@@ -43,6 +43,8 @@
 
 2023-03-01: <b>Announcements</b> Please see the standard operation procedures for an absentism due to SARS-CoV-2. <a href="../teaching/s2023_dg1/2023-03-01_covid_absence.pdf" title="Absence due to SARS-CoV-2">PDF</a><br
   -->
+2025-04-03: <FONT COLOR="red">Homework #3</FONT> has been posted below.<br> 
+2025-04-03: <FONT COLOR="purple">Quiz I</FONT> will cover Chapters 1 to 2.<br>     
 2025-03-27: <FONT COLOR="red">Homework #2</FONT> has been posted below.<br>   
 2025-03-13: <FONT COLOR="red">Homework #1</FONT> has been posted below.<br>   
 2025-03-01: Lecture notes will be made available on CBNU eCampus hopefully by the weekend of each class meeting.<br>  
@@ -71,18 +73,18 @@ Section 2.5: #1.<br>
 Section 2.6: #6, 9, 10.<br><br>
 
   
+<b>Homework  #3</b> 24 problems.<br>
+Section 3.2: #3, 4[(1),(3),(5)], 5.<br>
+Section 3.3: #4, 5, 6, 7, 8, 9[(2),(3),(4),(5),(6),(7),(9)], 10.<br>
+Section 3.4: #3[(4),(5),(6),(7),(8)], 4, 5, 6, 7.<br>
+Section 3.5: #2, 3, 4, 5.<br>
+Section 3.6: #1(6), 2[(1),(2)].<br><br>  
+
+  
   
   <!--
 
  
-  
-<b>Homework  #3</b> 24 problems.<br>
-Section 3.2: #2, 3[(1),(3),(5)], 4.<br>
-Section 3.3: #4, 5, 6, 7[(2),(3),(4),(5),(6),(7),(9)], 9.<br>
-Section 3.4: #3, 4, 5, 6, 7.<br>
-Section 3.5: #2, 3, 4, 5.<br>
-Section 3.6: #1(6), 2[(1),(2)].<br>
-Section 3.7: #1, 2, 3, 4, 5.<br><br>  
 
 <b>Homework  #4</b> 10 problems.<br>
 Section 4.1: #1[(1),(3),(5)], 2, 3[(1),(3)], 4[(1),(2)].<br>
@@ -121,7 +123,7 @@ Section 8.6: #1[(1),(2),(4),(6)], 2, 5, 6.<br><br>
 
   -->
 <h2><p>Quiz Schedules</p></h2>
-Quiz I: April 10th, 09:30--09:50, in-class.<br>
+Quiz I: April 10th, 09:30--09:50, in-class. Coverage: Chapters 1 and 2.<br>
 Quiz II: May 29th, 09:30--09:50, in-class.<br><br>
 
   
