--- a/teaching/s2025_dg1.html
+++ b/teaching/s2025_dg1.html
@@ -30,13 +30,15 @@
 2024-05-15: <FONT COLOR="red">Homework #6</FONT> has been posted below.<br>    
 2024-05-01: <b>Announcements</b> The class will go online for today's 14:00 class. Watch the lecture through eCampus by May 16th.<br>  
 2024-04-28: The midterm exam papers have been graded. If you want to see your graded paper or to just receive your score by email, please email me no later than Tuesday, May 7th 23:59. Please read the email announcement for more details.<br>       
-2024-04-11: <FONT color="#FF00FF"><b>Midterm exam announcement</b></FONT> The detail has been posted below.<br>    
-2024-04-11: <FONT COLOR="red">Homework #5</FONT> has been posted below.<br>     
+
+
 2024-04-11: <FONT COLOR="red">Homework #4</FONT> has been posted below.<br>
 2024-04-10: <b>Announcements</b> The class will go online for today's 16:00 class. Watch the lecture through eCampus by April 24th.<br>    
 
 
    -->
+2025-04-10: <FONT COLOR="red">Homework #5</FONT> has been posted below.<br>        
+2025-04-10: <FONT color="#FF00FF"><b>Midterm exam announcement</b></FONT> The detail has been posted below.<br>       
 2025-04-03: <FONT COLOR="red">Homework #4</FONT> has been posted below.<br>   
 2025-04-03: <FONT COLOR="red">Homework #3</FONT> has been posted below.<br>   
 2025-04-03: <FONT COLOR="red">Homework #2</FONT> has been posted below.<br>      
@@ -60,10 +62,6 @@ Problems from Chapter 4 (Part 2): #11, 12, 13, 16, 17, 18, 19, 21, 28, 30<br><br
 Problems from Chapter 4 (Part 3): #32, 33, 34, 35, 38<br>  
 Problems from the National Exam: <a href="s2025_dg1/handout1.pdf" title="Selected problems from the national exam">PDF</a>.<br><br>
 
-   
-  <!-- 
-
-
 <b>Homework  #5</b>  20 problems.<br>
 Problems from Chapter 5: #5, 7, 8<br>
 Problems from O'Neill, Elementary Differential Geometry, p.15 Exercise #3, 4, 5<br>
@@ -72,6 +70,10 @@ Problems from O'Neill, Elementary Differential Geometry, p.40 Exercise #4, 5, 6,
 Problems from O'Neill, Elementary Differential Geometry, p.106 Exercise #2, 7, 8<br>
 Problems from O'Neill, Elementary Differential Geometry, p.110 Exercise #2, 4<br>
 Problems from O'Neill, Elementary Differential Geometry, p.120 Exercise #4<br><br>
+
+   
+  <!-- 
+
 
 <b>Homework  #6</b> 7 problems.<br>
 Problems from Handout 2.<br><br> 
@@ -86,14 +88,14 @@ Problems from Chapter 8 Part 2: #17, 19(a), 28, 30, 34, 38.<br><br>
   -->
 
 <h2><p>Exam Schedules</p></h2>
-TBA
-  <!--
-Midterm exam: <FONT COLOR="#C40062">24 April (Wednesday) 16:00--17:40</FONT> in-class. <br>
+Midterm exam: <FONT COLOR="#C40062">22 April (Tuesday) 14:00--15:40</FONT> in-class. <br>
 - Coverage: Chapters 3, 4, and 5 of the main textbook including Handout 1<br>
 - Total 8 questions.There will be one set of True/False questions (Please note that you get full credit if you are correct, no credit for no answer, and negative of the assigned score if your answer to this question is incorrect). This exam will be geared toward giving advantages to those who were carefully following class discussions while keeping a good pace of doing homework. <br>
-- If you cannot make it to the in-class exam due to an official cause (including properly documented illness), you have to submit a Make-up Exam Application Form at your department. Here is a handout about <a href="../teaching/makeup.pdf" title="Make-up exam policies">make-up exam policies</a>.<br>
-The average was 59.31. The maximum score achieved by a student was 96.<br><br>  
+- If you cannot make it to the in-class exam due to an official cause (including properly documented illness), you have to submit a Make-up Exam Application Form at your department. Here is a handout about <a href="../teaching/makeup.pdf" title="Make-up exam policies">make-up exam policies</a>.<br><br>  
 
+   <!--
+The average was 59.31. The maximum score achieved by a student was 96.<br>
+   
  Final Exam: <FONT COLOR="#C40062">14 June (Friday) 10:00--11:40</FONT> in-class. <br>
 - Coverage: Everything covered in this course including all homework problems.<br>
 - Total 8 questions. There will be one set of True/False questions (Please note that you get full credit if you are correct, no credit for no answer, and negative of the assigned score if your answer to this question is incorrect). This exam will be geared toward giving advantages to those who were carefully following class discussions while keeping a good pace of doing homework. <br>
