--- a/teaching/s2025_geom1.html
+++ b/teaching/s2025_geom1.html
@@ -33,9 +33,10 @@
 2024-04-28: <FONT COLOR="red">Homework #6</FONT> has been posted below.<br> 
 2024-04-28: The midterm exam papers have been graded. If you want to see your graded paper or to just receive your score by email, please email me no later than Tuesday, May 7th 23:59. Please read the email announcement for more details.<br>     
 2024-04-18: The midterm exam will cover up to Section 6.1.<br>  
-2024-04-11: <FONT color="#FF00FF"><b>The midterm exam announcement</b></FONT> The detail has been posted below.<br>    
+
 2024-04-10: <b>Announcements</b> The class will go online for today's 14:00 class. Watch the lecture through eCampus by April 24th.<br>  
  --> 
+2025-04-10: <FONT color="#FF00FF"><b>The midterm exam announcement</b></FONT> The detail has been posted below.<br>     
 2025-04-03: <FONT COLOR="red">Homework #5</FONT> has been posted below.<br>  
 2025-04-03: <FONT COLOR="red">Homework #4</FONT> has been posted below.<br>  
 2025-04-03: <FONT COLOR="red">Homework #3</FONT> has been posted below.<br> 
@@ -121,12 +122,12 @@ Exercises in Section 6.4. p.63 #1<br><br>
 
 
 <h2><p>Exam Schedules</p></h2>
-TBA
-  <!--
-  The midterm exam: <FONT COLOR="#C40062">25 April (Thursday) 13:00--14:40</FONT> in-class. <br>
-- Coverage: Chapter 1 to Chapter 6 Section 1.<br>
+The midterm exam: <FONT COLOR="#C40062">24 April (Thursday) 10:00--11:40</FONT> in-class. <br>
+- Coverage: Chapter 1 to Chapter 6 (up to where we are by April 17th).<br>
 - Total 8 questions. There will be one set of True/False questions (Please note that you get full credit if you are correct, no credit for no answer, and negative of the assigned score if your answer to this question is incorrect). This exam will be geared toward giving advantages to those who were carefully following class discussions while keeping a good pace of doing homework.<br>
 - If you cannot make it to the in-class exam due to an official cause (including properly documented illness), you have to submit a Make-up Exam Application Form at your department. Here is a handout about <a href="../teaching/makeup.pdf" title="Make-up exam policies">make-up exam policies</a>.<br>
+<br>
+  <!--
  The average was 48.17. The maximum score achieved by a student was 87.<br>
   
  Final Exam: <FONT COLOR="#C40062">13 June (Thursday) 13:00--14:40</FONT> in-class.<br>
