--- a/teaching/s2025_calc1.html
+++ b/teaching/s2025_calc1.html
@@ -43,7 +43,7 @@
 
 2023-03-01: <b>Announcements</b> Please see the standard operation procedures for an absentism due to SARS-CoV-2. <a href="../teaching/s2023_dg1/2023-03-01_covid_absence.pdf" title="Absence due to SARS-CoV-2">PDF</a><br
   -->
-2025-04-09: <FONT color="#FF00FF"><b>The 1st midterm exam announcement</b></FONT> The detail has been posted below.<br>   
+2025-04-09: <FONT color="#FF00FF"><b>The midterm exam announcement</b></FONT> The detail has been posted below.<br>   
 2025-04-03: <FONT COLOR="red">Homework #3</FONT> has been posted below.<br> 
 2025-04-03: <FONT COLOR="purple">Quiz I</FONT> will cover Chapters 1 to 2.<br>     
 2025-03-27: <FONT COLOR="red">Homework #2</FONT> has been posted below.<br>   
