--- a/teaching/s2025_introgeom.html
+++ b/teaching/s2025_introgeom.html
@@ -40,7 +40,8 @@
 2023-03-24: A note on Desargues' theorem and its proofs is available at CBNU eCampus (Blackboard) in the Week 4 course materials folder.<br>
 2023-03-23: <FONT COLOR="red">Homework #3</FONT> has been posted below.<br>  
 2023-03-16: <FONT COLOR="red">Homework #2</FONT> has been posted below.<br> 
---> 
+-->
+2025-04-10: <FONT color="#FF00FF"><b>Midterm exam</b></FONT> will take place on April 24th (Thu), in-class. Details are below.<br>    
 2025-04-03: <FONT COLOR="red">Homework #5</FONT> has been posted below.<br>  
 2025-03-27: <FONT COLOR="red">Homework #4</FONT> has been posted below.<br> 
 2025-03-20: <FONT COLOR="red">Homework #3</FONT> has been posted below.<br> 
@@ -80,13 +81,17 @@ Chapter 4 Problems 12 to 25<br><br>
   -->
 
 <h2><p>Exam Schedules</p></h2>
-TBA
-  <!--
-Midterm Exam: <FONT COLOR="#C40062">27 April (Thursday) 13:00--14:40</FONT> in-class. <br>
+Midterm Exam: <FONT COLOR="#C40062">24 April (Thursday) 13:00--14:40</FONT> in-class. <br>
 - <b>Important:</b> Bring your straightedge (a ruler).<br>
-- Coverage (updated): Chapter 1, <s>Chapter 2 (only those sections we completed by April 20th class)</s> Chapter 2 Part I and II (p.1 to p.113). <br>
+- Coverage: Chapter 1 and Chapter 2 (only those sections we completed by April 17th class).<br>
 - Total 8 questions. There will be one set of True/False questions (Please note that you get full credit if you are correct, no credit for no answer, and negative of the assigned score if your answer to this question is incorrect). This exam will be geared toward giving advantages to those who were carefully following class discussions while keeping a good pace of doing homework. <br>
-- If you cannot make it to the in-class exam due to an official cause (including properly documented illness), you have to submit a Make-up Exam Application Form at your department. Here is a handout about <a href="../teaching/makeup.pdf" title="Make-up exam policies">make-up exam policies</a>.<br>
+- If you cannot make it to the in-class exam due to an official cause (including properly documented illness), you have to submit a Make-up Exam Application Form at your department. Here is a handout about <a href="../teaching/makeup.pdf" title="Make-up exam policies">make-up exam policies</a>.<br> 
+ <br> 
+ <!--
+
+ 
+
+
 The average was 77.81. The maximum score achieved by a student was 98.<br><br>
  
  Final Exam: <FONT COLOR="#C40062">09 June (Friday) 17:00--18:40</FONT> Location: E1-2 Room 306. <br>
