--- a/teaching/s2025_calc1.html
+++ b/teaching/s2025_calc1.html
@@ -43,6 +43,7 @@
 
 2023-03-01: <b>Announcements</b> Please see the standard operation procedures for an absentism due to SARS-CoV-2. <a href="../teaching/s2023_dg1/2023-03-01_covid_absence.pdf" title="Absence due to SARS-CoV-2">PDF</a><br
   -->
+2025-04-17: <FONT color="#FF00FF"><b>The midterm exam announcement</b></FONT> Please find the location from below.<br>  
 2025-04-09: <FONT color="#FF00FF"><b>The midterm exam announcement</b></FONT> The detail has been posted below.<br>   
 2025-04-03: <FONT COLOR="red">Homework #3</FONT> has been posted below.<br> 
 2025-04-03: <FONT COLOR="purple">Quiz I</FONT> will cover Chapters 1 to 2.<br>     
@@ -129,7 +130,7 @@ Quiz II: May 29th, 09:30--09:50, in-class.<br><br>
 
   
 <h2><p>Exam Schedules</p></h2>
-Midterm exam: <FONT COLOR="#C40062">29 April (Tuesday), 19:00--20:00.</FONT> Location: TBA.<br>
+Midterm exam: <FONT COLOR="#C40062">29 April (Tuesday), 19:00--20:00.</FONT> Location: N14 Room 107.<br>
 - Coverage: Chapters 1 to 4.<br>
 - A sample problem set is available at the course LMS (Notices). Email me if you cannot find a copy.<br>  
 - If you cannot make it to the in-class exam due to an official cause (including properly documented illness), you have to submit a Make-up Exam Application Form at your department. Here is a handout about <a href="../teaching/makeup.pdf" title="Make-up exam policies">make-up exam policies</a>.<br>
