--- a/teaching/s2025_geom1.html
+++ b/teaching/s2025_geom1.html
@@ -123,7 +123,7 @@ Exercises in Section 6.4. p.63 #1<br><br>
 
 <h2><p>Exam Schedules</p></h2>
 The midterm exam: <FONT COLOR="#C40062">24 April (Thursday) 10:00--11:40</FONT> in-class. <br>
-- Coverage: Chapter 1 to Chapter 6 (up to where we are by April 17th).<br>
+- Coverage: Chapter 1 to Chapter 6 (up to Section 6.2).<br>
 - Total 8 questions. There will be one set of True/False questions (Please note that you get full credit if you are correct, no credit for no answer, and negative of the assigned score if your answer to this question is incorrect). This exam will be geared toward giving advantages to those who were carefully following class discussions while keeping a good pace of doing homework.<br>
 - If you cannot make it to the in-class exam due to an official cause (including properly documented illness), you have to submit a Make-up Exam Application Form at your department. Here is a handout about <a href="../teaching/makeup.pdf" title="Make-up exam policies">make-up exam policies</a>.<br>
 <br>
