--- a/teaching/s2025_calc1.html
+++ b/teaching/s2025_calc1.html
@@ -36,13 +36,14 @@
 2023-05-02: <FONT COLOR="red">Homework #6</FONT> has been posted below.<br>   
 2023-05-02: <FONT COLOR="red">Homework #5</FONT> has been posted below.<br>   
 2023-04-25: <FONT color="#FF00FF"><b>The 2nd midterm exam announcement</b></FONT> The detail has been posted below.<br> 
-2023-04-15: <FONT COLOR="red">Homework #4</FONT> has been posted below.<br>     
+
 2023-04-08: <FONT COLOR="red">Homework #3</FONT> has been posted below.<br>   
 
 
 
 2023-03-01: <b>Announcements</b> Please see the standard operation procedures for an absentism due to SARS-CoV-2. <a href="../teaching/s2023_dg1/2023-03-01_covid_absence.pdf" title="Absence due to SARS-CoV-2">PDF</a><br
   -->
+2025-04-22: <FONT COLOR="red">Homework #4</FONT> has been posted below.<br>     
 2025-04-17: <FONT color="#FF00FF"><b>The midterm exam announcement</b></FONT> Please find the location from below.<br>  
 2025-04-09: <FONT color="#FF00FF"><b>The midterm exam announcement</b></FONT> The detail has been posted below.<br>   
 2025-04-03: <FONT COLOR="red">Homework #3</FONT> has been posted below.<br> 
@@ -82,18 +83,18 @@ Section 3.4: #3[(4),(5),(6),(7),(8)], 4, 5, 6, 7.<br>
 Section 3.5: #2, 3, 4, 5.<br>
 Section 3.6: #1(6), 2[(1),(2)].<br><br>  
 
+
+<b>Homework  #4</b> 10 problems.<br>
+Section 4.1: #1[(1),(3),(5)], 2, 3[(1),(3)], 4[(1),(2)].<br>
+Section 4.2: #1[(4),(6)], 2[(1),(3),(5),(6)], 3[(1),(2),(3),(4)].<br>
+Section 4.3: #2[(1), (3), (5)].<br>
+Section 4.4: #1.<br>
+Section 4.5: #1[(1), (3), (5)].<br><br>
   
   
   <!--
 
  
-
-<b>Homework  #4</b> 10 problems.<br>
-Section 4.1: #1[(1),(3),(5)], 2, 3[(1),(3)], 4[(1),(2)].<br>
-Section 4.2: #1[(4),(6)], 2[(1),(3),(5),(6)].<br>
-Section 4.3: #2[(1), (3), (5)].<br>
-Section 4.4: #1[(1), (2)], #2(2).<br>
-Section 4.5: #1[(1), (3), (5)].<br><br>
 
  
 <b>Homework  #5</b> 17 problems.<br>
