--- a/teaching/s2025_calc1.html
+++ b/teaching/s2025_calc1.html
@@ -29,12 +29,8 @@
 2023-05-20: <b>Announcements</b> The last day to dispute your grade details and relevant information are <a href="../teaching/s2023_calc1/2023-06-10_dispute.pdf" title="Dispute related">here</a>.<br>
 2023-05-10: We won't meet on Monday the June 19th class for the Memorial Day make-up. Instead, the course will go online for that day's class by providing a YouTube video lecture to watch through CBNU eCampus. You will receive an email announcement for further details nearing June 6th.<br>
 2023-05-10: <FONT color="#FF00FF"><b>The final exam announcement</b></FONT> The detail has been posted below.<br> 
-2023-05-10: <FONT COLOR="red">Homework #8</FONT> has been posted below.<br>   
-2023-05-10: <FONT COLOR="red">Homework #7</FONT> has been posted below.<br>   
 2023-05-10: <FONT color="#FF00FF"><b>The 3rd midterm exam announcement</b></FONT> The detail has been posted below.<br>
 2023-05-09: Review report of the 1st course evaluation survey is available on eCampus.<br>   
-2023-05-02: <FONT COLOR="red">Homework #6</FONT> has been posted below.<br>   
-2023-05-02: <FONT COLOR="red">Homework #5</FONT> has been posted below.<br>   
 2023-04-25: <FONT color="#FF00FF"><b>The 2nd midterm exam announcement</b></FONT> The detail has been posted below.<br> 
 
 2023-04-08: <FONT COLOR="red">Homework #3</FONT> has been posted below.<br>   
@@ -43,6 +39,10 @@
 
 2023-03-01: <b>Announcements</b> Please see the standard operation procedures for an absentism due to SARS-CoV-2. <a href="../teaching/s2023_dg1/2023-03-01_covid_absence.pdf" title="Absence due to SARS-CoV-2">PDF</a><br
   -->
+2025-04-24: <FONT COLOR="red">Homework #8</FONT> has been posted below.<br>   
+2025-04-24: <FONT COLOR="red">Homework #7</FONT> has been posted below.<br>   
+2025-04-24: <FONT COLOR="red">Homework #6</FONT> has been posted below.<br>   
+2025-04-24: <FONT COLOR="red">Homework #5</FONT> has been posted below.<br>   
 2025-04-22: <FONT COLOR="red">Homework #4</FONT> has been posted below.<br>     
 2025-04-17: <FONT color="#FF00FF"><b>The midterm exam announcement</b></FONT> Please find the location from below.<br>  
 2025-04-09: <FONT color="#FF00FF"><b>The midterm exam announcement</b></FONT> The detail has been posted below.<br>   
@@ -90,41 +90,37 @@ Section 4.2: #1[(4),(6)], 2[(1),(3),(5),(6)], 3[(1),(2),(3),(4)].<br>
 Section 4.3: #2[(1), (3), (5)].<br>
 Section 4.4: #1.<br>
 Section 4.5: #1[(1), (3), (5)].<br><br>
-  
-  
-  <!--
 
- 
-
- 
+   
 <b>Homework  #5</b> 17 problems.<br>
 Section 5.1: #2, 3.<br>
 Section 5.2: #1[(1),(3),(5)], 3, 4, 5.<br>
-Section 5.3: #1[(1),(3),(5),(7)], 2[(1),(2)], 4, 6, 7.<br>
+Section 5.3: #1[(1),(3),(5),(7)], 2[(1),(3)], 4, 6, 7.<br>
 Section 5.4: #1[(1),(3),(5),(7)], 2[(1),(3)], 3.<br>
-Section 5.5: #1[(1),(2)], 2, 3.<br><br>  
+Section 5.5: #1[(1),(2),(3),(5)], 2, 3.<br><br>  
  
-<b>Homework  #6</b> 11 problems.<br>
-Section 6.1: #2, 3, 4.<br>
-Section 6.2: #3, 4, 5, 6, 7, 8.<br>
+<b>Homework  #6</b> 12 problems.<br>
+Section 6.1: #1[(1),(2),(3),(5)], 2, 3, 4, 5.<br>
+Section 6.2: #1, 3, 4, 5, 6.<br>
 Section 6.3: #1[(1),(3)], 2[(1),(3)].<br><br>  
 
-<b>Homework  #7</b> 16 problems.<br>
+<b>Homework  #7</b> 27 problems.<br>
+Section 7.1: #1, 2, 4.<br>
 Section 7.2: #1, 2, 4, 5, 7.<br>
-Section 7.3: #1, 3, 7[(3),(4),(5)], 8.<br>
-Section 7.4: #4, 9.<br>
-Section 7.5: #3, 7.<br>
-Section 7.6: #2, 3, 4.<br><br>  
+Section 7.3: #1, 3, 4, 5, 6, 7[(3),(4),(5)], 8.<br>
+Section 7.4: #4, 5, 7, 8, 9.<br>
+Section 7.5: #3, 6, 7, 8.<br>
+Section 7.6 (optional): #2, 3, 4.<br><br>  
   
-<b>Homework  #8</b> 18 problems.<br>
-Section 8.1: #3, 4, 6.<br>
+<b>Homework  #8</b> 21 problems.<br>
+Section 8.1: #3, 4, 8, 10.<br>
 Section 8.2: #1[(1),(3),(5)], 2[(1),(3),(5)], 3[(1),(3),(5)].<br>
 Section 8.3: #1[(1),(3),(5)], 2[(1),(3),(5)], 3[(1),(3),(5),(7)].<br>
 Section 8.4: #1[(1),(3),(5),(7)], 4[(1),(3),(5),(7)].<br>
-Section 8.5: #1[(1),(3),(5),(7)], 2[(1),(4)], 4.<br>
-Section 8.6: #1[(1),(2),(4),(6)], 2, 5, 6.<br><br>     
+Section 8.5: #1[(1),(3),(5),(7)], 2[(1),(4)], 4, 6.<br>
+Section 8.6: #1[(1),(2),(4),(6)], 2, 5, 6, 7.<br><br>     
 
-  -->
+  
 <h2><p>Quiz Schedules</p></h2>
 Quiz I: April 10th, 09:30--09:50, in-class. Coverage: Chapters 1 and 2.<br>
 Quiz II: May 29th, 09:30--09:50, in-class.<br><br>
