--- a/teaching/s2025_calc1.html
+++ b/teaching/s2025_calc1.html
@@ -39,6 +39,7 @@
 
 2023-03-01: <b>Announcements</b> Please see the standard operation procedures for an absentism due to SARS-CoV-2. <a href="../teaching/s2023_dg1/2023-03-01_covid_absence.pdf" title="Absence due to SARS-CoV-2">PDF</a><br
   -->
+2025-04-28: <FONT color="#FF00FF"><b>The midterm exam announcement</b></FONT> Mathematics Department has notified that each examinee has to present one's ID card. Please bring your ID card as you did in Quiz I. <br>  
 2025-04-24: <FONT COLOR="red">Homework #8</FONT> has been posted below.<br>   
 2025-04-24: <FONT COLOR="red">Homework #7</FONT> has been posted below.<br>   
 2025-04-24: <FONT COLOR="red">Homework #6</FONT> has been posted below.<br>   
@@ -130,11 +131,15 @@ Quiz II: May 29th, 09:30--09:50, in-class.<br><br>
 Midterm exam: <FONT COLOR="#C40062">29 April (Tuesday), 19:00--20:00.</FONT> Location: N14 Room 107.<br>
 - Coverage: Chapters 1 to 4.<br>
 - A sample problem set is available at the course LMS (Notices). Email me if you cannot find a copy.<br>  
-- If you cannot make it to the in-class exam due to an official cause (including properly documented illness), you have to submit a Make-up Exam Application Form at your department. Here is a handout about <a href="../teaching/makeup.pdf" title="Make-up exam policies">make-up exam policies</a>.<br>
+- If you cannot make it to the in-class exam due to an official cause (including properly documented illness), you have to submit a Make-up Exam Application Form at your department. Here is a handout about <a href="../teaching/makeup.pdf" title="Make-up exam policies">make-up exam policies</a>.
+- You must present your valid ID card during the exam. The same ID card policies apply as in your Quizzes I, II. If you don't present a valid ID card, you will be asked to leave the classroom and your exam score will be zero.<br>  
+  <br>
  
 Final exam: <FONT COLOR="#C40062">17 June (Tuesday), 19:00--20:00.</FONT> Location: TBA.<br>
 - Coverage: TBA.<br>
-- If you cannot make it to the in-class exam due to an official cause (including properly documented illness), you have to submit a Make-up Exam Application Form at your department. Here is a handout about <a href="../teaching/makeup.pdf" title="Make-up exam policies">make-up exam policies</a>.<br>
+- If you cannot make it to the in-class exam due to an official cause (including properly documented illness), you have to submit a Make-up Exam Application Form at your department. Here is a handout about <a href="../teaching/makeup.pdf" title="Make-up exam policies">make-up exam policies</a>.
+- You must present your valid ID card during the exam. The same ID card policies apply as in your Quizzes I, II. If you don't present a valid ID card, you will be asked to leave the classroom and your exam score will be zero.<br>  
+<br>
  
   
   
