--- a/teaching/s2025_introgeom.html
+++ b/teaching/s2025_introgeom.html
@@ -41,6 +41,10 @@
 2023-03-23: <FONT COLOR="red">Homework #3</FONT> has been posted below.<br>  
 2023-03-16: <FONT COLOR="red">Homework #2</FONT> has been posted below.<br> 
 -->
+2025-05-15: <FONT COLOR="red">Homework #10</FONT> has been posted below.<br>
+2025-05-07: <FONT COLOR="red">Homework #9</FONT> has been posted below.<br>   
+2025-05-01: <FONT COLOR="red">Homework #8</FONT> has been posted below.<br>  
+2025-04-17: <FONT COLOR="red">Homework #7</FONT> has been posted below.<br>  
 2025-04-10: <FONT COLOR="red">Homework #6</FONT> has been posted below.<br>  
 2025-04-10: <FONT color="#FF00FF"><b>Midterm exam</b></FONT> will take place on April 24th (Thu), in-class. Details are below.<br>    
 2025-04-03: <FONT COLOR="red">Homework #5</FONT> has been posted below.<br>  
@@ -66,6 +70,14 @@ Chapter 1 Problems 32 to 53<br><br>
 Chapter 2 Problems 1 to 4<br><br> 
  <b>Homework  #6</b> 4 problems. Due Date: April 15th (Tue).<br>
 Chapter 2 Problems 5 to 8<br><br>  
+ <b>Homework #7</b> 14 problems. Due Date: April 22nd (Tue).<br>
+Chapter 2 Problems 9 to 22<br><br>  
+ <b>Homework #8</b> 18 problems. Due Date: May 8th (Tue).<br>
+Chapter 2 Problems 23 to 40<br><br>   
+ <b>Homework #9</b> 19 problems. Due Date: May 13th (Tue).<br>
+Chapter 2 Problems 41 to 59<br><br>   
+   <b>Homework #10</b> 8 problems. Due Date: May 20th (Tue).<br>
+Chapter 4 Problems 1 to 8<br><br>  
  
  <!--
 
@@ -91,12 +103,13 @@ Midterm Exam: <FONT COLOR="#C40062">24 April (Thursday) 13:00--14:40</FONT> in-c
 - Total 8 questions. There will be one set of True/False questions (Please note that you get full credit if you are correct, no credit for no answer, and negative of the assigned score if your answer to this question is incorrect). This exam will be geared toward giving advantages to those who were carefully following class discussions while keeping a good pace of doing homework. <br>
 - If you cannot make it to the in-class exam due to an official cause (including properly documented illness), you have to submit a Make-up Exam Application Form at your department. Here is a handout about <a href="../teaching/makeup.pdf" title="Make-up exam policies">make-up exam policies</a>.<br> 
  <br> 
+ The average was 58.96. The maximum score achieved by a student was 96.<br><br>
  <!--
 
  
 
 
-The average was 77.81. The maximum score achieved by a student was 98.<br><br>
+
  
  Final Exam: <FONT COLOR="#C40062">09 June (Friday) 17:00--18:40</FONT> Location: E1-2 Room 306. <br>
 - <b>Important:</b> Bring your straightedge (a ruler). You can also use a compass if you want but it is not mandatory.<br>
