--- a/teaching/s2025_geom1.html
+++ b/teaching/s2025_geom1.html
@@ -23,7 +23,7 @@
 2024-06-24: Letter grades have been submitted. Enjoy your summer break.<br> 
 2024-06-13: Please respond by June 19th noon if you want to see your graded final exam papers or if you want to receive the result by email. Please read the email announcement.<br> 
 2024-06-02: <b>Announcements</b> The class will go online for June 6th 13:00 class. Watch the lecture through eCampus by the final exam day.<br>   
-2024-05-27: <FONT color="#FF00FF"><b>Final exam announcement</b></FONT> The detail has been posted below.<br>
+
 2024-05-27: Review report of the 1st course evaluation survey is available on eCampus.<br>
 2024-05-15: <FONT COLOR="red">Homework #9</FONT> has been posted below.<br>  
 2024-05-15: <FONT COLOR="red">Homework #8</FONT> has been posted below.<br>  
@@ -36,6 +36,11 @@
 
 2024-04-10: <b>Announcements</b> The class will go online for today's 14:00 class. Watch the lecture through eCampus by April 24th.<br>  
  --> 
+2025-06-05: <FONT color="#FF00FF"><b>Final exam announcement</b></FONT> The detail has been posted below.<br> 
+2025-06-05: <FONT COLOR="red">Homework #9</FONT> has been posted below.<br>  
+2025-06-05: <FONT COLOR="red">Homework #8</FONT> has been posted below.<br>  
+2025-06-05: <FONT COLOR="red">Homework #7</FONT> has been posted below.<br>  
+2025-06-05: <FONT COLOR="red">Homework #6</FONT> has been posted below.<br>  
 2025-04-10: <FONT color="#FF00FF"><b>The midterm exam announcement</b></FONT> The detail has been posted below.<br>     
 2025-04-03: <FONT COLOR="red">Homework #5</FONT> has been posted below.<br>  
 2025-04-03: <FONT COLOR="red">Homework #4</FONT> has been posted below.<br>  
@@ -86,11 +91,6 @@ Exercises in Section 6.3. p.61 #1<br>
 Exercises in Section 6.4. p.63 #1<br><br>
 
  
- 
- <!--
-
-
- 
 
 <b>Homework  #6</b> 8 problems.<br>
  Exercises in Section 7.1. p.68 #1, 2<br>
@@ -118,7 +118,8 @@ Exercises in Section 6.4. p.63 #1<br><br>
  Exercises in Section 11.3. p.113 #1<br>
  Exercises in Section 12.1. p.118 #1[(i),(ii),(iii)]<br>
  Exercises in Section 12.2. p.121 #2<br><br>
- -->
+
+
 
 
 <h2><p>Exam Schedules</p></h2>
@@ -127,16 +128,18 @@ The midterm exam: <FONT COLOR="#C40062">24 April (Thursday) 10:00--11:40</FONT> 
 - Total 8 questions. There will be one set of True/False questions (Please note that you get full credit if you are correct, no credit for no answer, and negative of the assigned score if your answer to this question is incorrect). This exam will be geared toward giving advantages to those who were carefully following class discussions while keeping a good pace of doing homework.<br>
 - If you cannot make it to the in-class exam due to an official cause (including properly documented illness), you have to submit a Make-up Exam Application Form at your department. Here is a handout about <a href="../teaching/makeup.pdf" title="Make-up exam policies">make-up exam policies</a>.<br>
 <br>
-  <!--
- The average was 48.17. The maximum score achieved by a student was 87.<br>
+ The average was 34.69. The maximum score achieved by a student was 58.<br>
   
- Final Exam: <FONT COLOR="#C40062">13 June (Thursday) 13:00--14:40</FONT> in-class.<br>
- - Coverage: Everything we covered in this course by June 9th including all homework problems.<br>
-- Total 8 questions. There will be one set of True/False questions (Please note that you get full credit if you are correct, no credit for no answer, and negative of the assigned score if your answer to this question is incorrect). This exam will be geared toward giving advantages to those who were carefully following class discussions while keeping a good pace of doing homework. <br>
+ Final Exam: <FONT COLOR="#C40062">12 June (Thursday) 10:00--11:40</FONT> in-class.<br>
+ - Coverage: Everything we covered in this course by June 11th including all homework problems.<br>
+- Total 6 questions. There will be one set of True/False questions (Please note that you get full credit if you are correct, no credit for no answer, and negative of the assigned score if your answer to this question is incorrect). This exam will be geared toward giving advantages to those who were carefully following class discussions while keeping a good pace of doing homework. <br>
 - If you cannot make it to the in-class exam due to an official cause (including properly documented illness), you have to submit a Make-up Exam Application Form at your department. Here is a handout about <a href="../teaching/makeup.pdf" title="Make-up exam policies">make-up exam policies</a>.<br>
- The average was 42.79. The maximum score achieved by a student was 100.<br>
+
  <br> 
 
+ 
+ <!--
+ The average was 42.79. The maximum score achieved by a student was 100.<br> 
  
 
     
