--- a/teaching/s2025_introgeom.html
+++ b/teaching/s2025_introgeom.html
@@ -22,7 +22,6 @@
 <!--
 2023-06-15: Letter grades have been submitted. Enjoy your summer break.<br>  
 2023-06-01 <b>Announcements</b> We won't meet on June 7th 14:00 (cf. announcement on May 11th). See the Week 14 folder of CBNU eCampus for a final exam summary video. <br>
-2023-06-01: <FONT color="#FF00FF"><b>Final exam announcement</b></FONT> The coverage has been updated. See below.<br>     
 2023-06-01: <FONT COLOR="red">Homework #9</FONT> has been posted below. Note the deadline is different from usual.<br>  
 2023-05-28: <FONT color="#FF00FF"><b>Final exam announcement</b></FONT> The detail has been posted below.<br> 
 2023-05-28: The announcement of the dispute procedure (2023.05.20.) has been updated. See the link therein.<br>  
@@ -41,7 +40,10 @@
 2023-03-23: <FONT COLOR="red">Homework #3</FONT> has been posted below.<br>  
 2023-03-16: <FONT COLOR="red">Homework #2</FONT> has been posted below.<br> 
 -->
-2025-05-15: <FONT COLOR="red">Homework #10</FONT> has been posted below.<br>
+2025-06-05: <FONT color="#FF00FF"><b>Final exam announcement</b></FONT> The coverage has been updated. See below.<br>     
+2025-05-29: <FONT COLOR="red">Homework #12</FONT> has been posted below.<br>
+ 2025-05-22: <FONT COLOR="red">Homework #11</FONT> has been posted below.<br>
+ 2025-05-15: <FONT COLOR="red">Homework #10</FONT> has been posted below.<br>
 2025-05-07: <FONT COLOR="red">Homework #9</FONT> has been posted below.<br>   
 2025-05-01: <FONT COLOR="red">Homework #8</FONT> has been posted below.<br>  
 2025-04-17: <FONT COLOR="red">Homework #7</FONT> has been posted below.<br>  
@@ -72,12 +74,18 @@ Chapter 2 Problems 1 to 4<br><br>
 Chapter 2 Problems 5 to 8<br><br>  
  <b>Homework #7</b> 14 problems. Due Date: April 22nd (Tue).<br>
 Chapter 2 Problems 9 to 22<br><br>  
- <b>Homework #8</b> 18 problems. Due Date: May 8th (Tue).<br>
+ <b>Homework #8</b> 18 problems. Due Date: May 8th (Thu).<br>
 Chapter 2 Problems 23 to 40<br><br>   
  <b>Homework #9</b> 19 problems. Due Date: May 13th (Tue).<br>
 Chapter 2 Problems 41 to 59<br><br>   
    <b>Homework #10</b> 8 problems. Due Date: May 20th (Tue).<br>
 Chapter 4 Problems 1 to 8<br><br>  
+    <b>Homework #11</b> 8 problems. Due Date: May 27th (Tue).<br>
+Chapter 4 Problems 9 to 16<br><br>  
+     <b>Homework #12</b> 6 problems. Due Date: June 5th (Thu).<br>
+Chapter 4 Problems 17 to 22<br><br>  
+
+ 
  
  <!--
 
@@ -104,20 +112,22 @@ Midterm Exam: <FONT COLOR="#C40062">24 April (Thursday) 13:00--14:40</FONT> in-c
 - If you cannot make it to the in-class exam due to an official cause (including properly documented illness), you have to submit a Make-up Exam Application Form at your department. Here is a handout about <a href="../teaching/makeup.pdf" title="Make-up exam policies">make-up exam policies</a>.<br> 
  <br> 
  The average was 58.96. The maximum score achieved by a student was 96.<br><br>
- <!--
-
- 
 
 
-
- 
- Final Exam: <FONT COLOR="#C40062">09 June (Friday) 17:00--18:40</FONT> Location: E1-2 Room 306. <br>
+ Final Exam: <FONT COLOR="#C40062">12 June (Thursday) 13:00--14:40</FONT> in-class. <br>
 - <b>Important:</b> Bring your straightedge (a ruler). You can also use a compass if you want but it is not mandatory.<br>
-- Coverage: Everything we covered in this course up to June 1st class (p.293).<br>
+- Coverage: Everything we covered in this course.<br>
 - Total 8 questions. There will be one set of True/False questions (Please note that you get full credit if you are correct, no credit for no answer, and negative of the assigned score if your answer to this question is incorrect). This exam will be geared toward giving advantages to those who were carefully following class discussions while keeping a good pace of doing homework. <br>
 - If you cannot make it to the in-class exam due to an official cause (including properly documented illness), you have to submit a Make-up Exam Application Form at your department. Here is a handout about <a href="../teaching/makeup.pdf" title="Make-up exam policies">make-up exam policies</a>.<br> 
- The average was 61.42. The maximum score achieved by a student was 100.<br><br>
 <br> 
+ 
+ <!--
+
+ The average was 61.42. The maximum score achieved by a student was 100.<br><br> 
+
+
+
+ 
  -->
  
  
