--- a/teaching/s2025_geom1.html
+++ b/teaching/s2025_geom1.html
@@ -102,7 +102,7 @@ Exercises in Section 6.4. p.63 #1<br><br>
  Exercises in Section 8.1. p.78 #1, 2, 3<br>
  Exercises in Section 8.3. p.81 #1[(i),(iii)]<br>
  Exercises in Section 8.4. p.83 #1<br>
- Exercises in Section 8.5. p.86 #1[(i)], 2[(i)]<br>
+ Exercises in Section 8.5. p.86 #1[(i)], 2[(i)]<br><br>
  
  
  <b>Homework  #8</b> 9 problems.<br>
@@ -127,8 +127,7 @@ The midterm exam: <FONT COLOR="#C40062">24 April (Thursday) 10:00--11:40</FONT> 
 - Coverage: Chapter 1 to Chapter 6 (up to Section 6.2).<br>
 - Total 8 questions. There will be one set of True/False questions (Please note that you get full credit if you are correct, no credit for no answer, and negative of the assigned score if your answer to this question is incorrect). This exam will be geared toward giving advantages to those who were carefully following class discussions while keeping a good pace of doing homework.<br>
 - If you cannot make it to the in-class exam due to an official cause (including properly documented illness), you have to submit a Make-up Exam Application Form at your department. Here is a handout about <a href="../teaching/makeup.pdf" title="Make-up exam policies">make-up exam policies</a>.<br>
-<br>
- The average was 34.69. The maximum score achieved by a student was 58.<br>
+ The average was 34.69. The maximum score achieved by a student was 58.<br><br>
   
  Final Exam: <FONT COLOR="#C40062">12 June (Thursday) 10:00--11:40</FONT> in-class.<br>
  - Coverage: Everything we covered in this course by June 11th including all homework problems.<br>
